--- a/src/app/work/projects/simple-portfolio-builder.mdx
+++ b/src/app/work/projects/simple-portfolio-builder.mdx
@@ -1,7 +1,10 @@
 ---
-title: "Once UI: Open-source design system"
+title: "AI Powered Research Assistant - Releasing Soon.."
 publishedAt: "2024-04-08"
 images:
-  - "/images/projects/project-01/cover-04.jpg"
-  - "/images/projects/project-01/video-01.mp4"
+  - "/images/projects/project-01/AI-Assistant1.png"
+  - "/images/projects/project-01/AI-Assistant2.png"
+  - "/images/projects/project-01/AI-Assistant.png"
+
+  
 ---
